# sicss

./: pyproject.toml
rag/isap/: __init__.py  files.py  helpers.py  info.py
rag/llms/: context.py  core.py  models.py
rag/preprocess/: chunk.py  core.py  translate.py
rag/txt_extract/: __init__.py  discard.py  files.py  lang.py  tables.py
rag/vectors/: embedd.py  index.py
